# corinth-canal

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  justfile
.cargo/: config.toml
.github/workflows/: ci.yml  docker-build.yml  gpu-tests.yml  test-coverage.yml
configs/: saaq15_llama_moe_only.toml  saaq15_moe_lineup.toml  saaq15_moe_lineup_smoke.toml
docs/: ARCHITECTURE.md  MODULE_STATUS.md  PROMOTION_RULES.md  RUN_PROFILES.md
examples/: csv_replay.rs  gpu_smoke_test.rs  saaq_latent_calibration.rs  synapse_diagnostic.rs  telemetry_bridge.rs
examples/support/: config.rs  mod.rs  observability.rs
manifests/: known_good_runs.md  proven_components.toml
outputs/routing/qwen_moe_2_7b_int4/math_logic/1776501275_qwen_moe_2_7b_int4_math_logic_run01/: latent_telemetry.csv  run_manifest.json
outputs/routing/qwen_moe_2_7b_int4/math_logic/1776501301_qwen_moe_2_7b_int4_math_logic_run01/: run_manifest.json
scripts/observability/: newrelic_event.sh  sentry_release.sh
src/: error.rs  funnel.rs  latent.rs  lib.rs  metric.rs  projector.rs  prompt.rs  types.rs
src/gpu/: mod.rs
src/gpu/kernels/: spiking_network.cu
src/gpu/wrappers/: accelerator.rs  context.rs  kernel.rs  memory.rs
src/hybrid/: hybrid.rs  mod.rs  olmoe.rs  projector.rs  qwen_local.rs
src/model/: core.rs  temporal.rs
src/moe/: adapter.rs  checkpoint.rs  mod.rs
src/transformer/: mod.rs
