[package]
name = "corinth-canal"
version = "0.1.0"
edition = "2024"
description = "Minimal standalone SNN-logic quantization bridge"
repository = "https://github.com/Spikenaut/corinth-canal"
license = "GPL-3.0-or-later"
keywords = ["neuromorphic", "snn", "llm", "moe", "hybrid", "spiking"]
categories = ["science", "algorithms"]
readme = "README.md"
exclude = ["docs/"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
cust    = "0.3.2"
anyhow  = { version = "1", features = ["backtrace"] }
tracing = "0.1"
memmap2 = "0.9"
libc = "0.2"
tokenizers = "0.19"

[build-dependencies]
cc = "1.0"

[features]
default = []
gguf = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[workspace]
