[package]
name = "corinth-canal"
version = "0.1.0"
edition = "2024"
description = "Reference SNN-logic quantization bridge for the rmems modular line"
repository = "https://github.com/rmems/corinth-canal"
license = "GPL-3.0-or-later"
keywords = ["neuromorphic", "snn", "llm", "moe", "hybrid", "spiking"]
categories = ["science", "algorithms"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
cust    = "0.3.2"
anyhow  = { version = "1", features = ["backtrace"] }
tracing = "0.1"
memmap2 = "0.9"
libc = "0.2"
serde_json = "1.0"

[dev-dependencies]
dotenvy = "0.15"
toml    = "0.8"

[build-dependencies]
cc = "1.0"

[features]
default = []
gguf = []
# Allow `cargo build` to succeed without nvcc by writing empty fatbin files.
# GPU paths will fail at runtime; CPU fallbacks remain available.
gpu-stub = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# Declare this crate as its own workspace root so Cargo does not walk up the
# filesystem and attach to an unrelated parent workspace (e.g. a broken
# /home/raulmc/Cargo.toml on a developer machine). Intentionally empty.
[workspace]
