[package]
name = "corinth-canal"
version = "0.1.0"
edition = "2024"
description = "Reference SNN-logic quantization bridge for the rmems modular line"
repository = "https://github.com/rmems/corinth-canal"
license = "GPL-3.0-or-later"
keywords = ["neuromorphic", "snn", "llm", "moe", "hybrid", "spiking"]
categories = ["science", "algorithms"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
cust = { version = "0.3.2", optional = true }
anyhow = { version = "1", features = ["backtrace"] }
tracing = "0.1"
memmap2 = "0.9"
libc = "0.2"
serde_json = "1.0"

[dev-dependencies]
dotenvy = "0.15"
toml    = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

[build-dependencies]
cc = "1.0"

[features]
default = ["cuda"]
gguf = []
cuda = ["cust"]
# Allows building without CUDA Toolkit by creating empty fatbin files.
# Does NOT depend on cuda feature to enable CPU-only builds.
gpu-stub = []
# CI-friendly profile: no cuda dependencies, minimal build for testing CI pipeline.
ci = []
[[example]]
name = "gpu_smoke_test"
required-features = ["cuda"]

[[example]]
name = "telemetry_bridge"
required-features = ["cuda"]

[[example]]
name = "csv_replay"
required-features = ["cuda"]

[[example]]
name = "saaq_latent_calibration"
required-features = ["cuda"]

[[example]]
name = "synapse_diagnostic"
required-features = ["cuda"]


[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# Declare this crate as its own workspace root so Cargo does not walk up the
# filesystem and attach to an unrelated parent workspace (e.g. a broken
# /home/raulmc/Cargo.toml on a developer machine). Intentionally empty.
[workspace]
